[tool.poetry]
name = "aiobafi6"
version = "0.5.0"
description = "Big Ass Fans i6/Haiku protocol asynchronous Python library"
authors = ["Jean-Francois Roy <jf@devklog.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jfroy/aiobafi6"
repository = "https://github.com/jfroy/aiobafi6"
keywords = ["BigAssFans", "i6", "Haiku", "SenseME"]
classifiers = [
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Home Automation",
]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "~3.20"
zeroconf = "~0.38"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
poethepoet = "^0.13.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18"
flake8 = "^4.0.1"

[tool.poetry.scripts]
aiobafi6 = 'aiobafi6.cmd.main:main'

[tool.poe.tasks.protoc]
cmd = "protoc --python_out=aiobafi6 --pyi_out=aiobafi6 proto/aiobafi6.proto"
help = "Generate Python protobuf files"

[tool.isort]
profile = "black"
src_paths = ["aiobafi6"]
skip_glob = ["aiobafi6/proto/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
