[tool.poetry]
name = "aiobafi6"
version = "0.10.2"
description = "Big Ass Fans i6/Haiku protocol asynchronous Python library"
authors = ["Jean-Francois Roy <jf@devklog.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jfroy/aiobafi6"
repository = "https://github.com/jfroy/aiobafi6"
keywords = ["BigAssFans", "i6", "Haiku", "SenseME"]
classifiers = [
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Home Automation",
]

[tool.poetry.dependencies]
python = ">=3.11.0"
protobuf = ">=3.20"
zeroconf = ">=0.38"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
poethepoet = "^0.40.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
flake8 = "^7.1.1"
pylint = "^4.0.4"

[tool.poetry.scripts]
aiobafi6 = 'aiobafi6.cmd.main:main'

[tool.poe.tasks.protoc]
cmd = "protoc --python_out=aiobafi6 --pyi_out=aiobafi6 proto/aiobafi6.proto"
help = "Generate Python protobuf files"

[tool.isort]
profile = "black"
src_paths = ["aiobafi6"]
skip_glob = ["aiobafi6/proto/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pylint.main]
py-version = "3.9"

[tool.pylint."messages control"]
disable = ["too-many-instance-attributes"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
